<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efeff4"
    tools:context=".MainFragments.ShopFragment">

    <com.daimajia.slider.library.SliderLayout
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slider">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/shop_button_height"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp">

                <ImageButton
                    android:id="@+id/simple_album_button"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/colorPrimary"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pimage1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/my_border"
                    android:clickable="false"
                    android:padding="8dp"
                    android:text="@string/simple_album"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/shop_button_height"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp">

                <ImageButton
                    android:id="@+id/photo_print_button"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/radius_bg"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pimage2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/my_border"
                    android:clickable="false"
                    android:padding="8dp"
                    android:text="@string/photo_print"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/shop_button_height"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp">

                <ImageButton
                    android:id="@+id/home_decor_button"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/radius_bg"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pimage3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/my_border"
                    android:clickable="false"
                    android:padding="8dp"
                    android:text="@string/home_decor"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>